rename build output to viewer-dx64.exe for debug build on target x64 add missing DevIL.dll
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@832 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/viewer/projects/vc8-Win/viewer.vcproj
+++ b/viewer/projects/vc8-Win/viewer.vcproj
@@ -146,7 +146,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalDependencies="rt-dx64.lib fx-dx64.lib libcollada14dom22-sdx64.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre-d.lib pcrecpp-d.lib libboost_system-d.lib minizip.lib libboost_filesystem-d.lib"
-				OutputFile="$(OutDir)\$(ProjectName)-d.exe"
+				OutputFile="$(OutDir)\$(ProjectName)-dx64.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;..\..\..\rt\build\vc8-Win-dx64&quot;;&quot;..\..\..\dom\build\vc8-1.4-dx64&quot;;&quot;..\..\..\fx\build\vc8-Win-dx64&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib\x64&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)\..\lib.x64&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\x64\&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\x64&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
 				GenerateManifest="true"
