--- a/viewer/projects/vc8-Win/viewer.vcproj
+++ b/viewer/projects/vc8-Win/viewer.vcproj
@@ -48,7 +48,7 @@
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
 				RuntimeTypeInfo="false"
-				WarningLevel="4"
+				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="1"
 			/>
@@ -209,7 +209,8 @@
 				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;..\..\..\fx\include;..\..\..\rt\include;..\..\..\rt\include/1.4;&quot;..\..\..\rt\external-libs\devil\win32\include&quot;;&quot;..\..\..\rt\external-libs\bullet\include&quot;;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\..\dom\external-libs\boost&quot;"
 				PreprocessorDefinitions="CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE;WIN32;NDEBUG;_WINDOWS;BOOST_ALL_NO_LIB"
 				RuntimeLibrary="2"
-				WarningLevel="4"
+				WarningLevel="3"
+				SuppressStartupBanner="false"
 				DebugInformationFormat="0"
 			/>
 			<Tool
@@ -225,9 +226,14 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="rt.lib fx.lib libcollada14dom22-s.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre.lib pcrecpp.lib libboost_system.lib minizip.lib DevIL.lib libboost_filesystem.lib libbulletmath_d.lib libbulletmultithreaded_d.lib libbulletopenglsupport_d.lib libbulletsoftbody_d.lib libbulletcollision_d.lib libbulletdynamics_d.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
+				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;..\..\..\dom\build\vc8-1.4&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8&quot;;&quot;..\..\..\fx\build\vc8-Win&quot;;&quot;..\..\..\rt\build\vc8-Win&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
+				IgnoreAllDefaultLibraries="false"
 				IgnoreDefaultLibraryNames=""
 				GenerateDebugInformation="false"
+				AssemblyDebug="2"
+				EnableCOMDATFolding="0"
+				OptimizeForWindows98="1"
 			/>
 			<Tool
 				Name="VCALinkTool"
