--- a/viewer/projects/vc8-Win/viewer.vcproj
+++ b/viewer/projects/vc8-Win/viewer.vcproj
@@ -63,13 +63,13 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rt-d.lib fx-d.lib libcollada14dom22-sd.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre-d.lib pcrecpp-d.lib libboost_system-d.lib minizip.lib DevIL.lib libboost_filesystem-d.lib libbulletmultithreaded_d.lib libbulletmath_d.lib libbulletopenglsupport_d.lib libbulletsoftbody_d.lib libbulletcollision_d.lib libbulletdynamics_d.lib"
+				AdditionalDependencies="rt-d.lib fx-d.lib libcollada14dom22-sd.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre-d.lib pcrecpp-d.lib libboost_system-d.lib minizip.lib DevIL.lib libboost_filesystem-d.lib libbulletmath.lib libbulletcollision.lib libbulletdynamics.lib"
 				OutputFile="$(OutDir)\$(ProjectName)-d.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="&quot;..\..\..\rt\build\vc8-Win-d&quot;;&quot;..\..\..\dom\build\vc8-1.4-d&quot;;&quot;..\..\..\fx\build\vc8-Win-d&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8\&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
 				GenerateManifest="true"
 				ManifestFile="$(IntDir)\$(TargetFileName).intermediate.manifest"
-				IgnoreDefaultLibraryNames="msvcrt"
+				IgnoreDefaultLibraryNames="LIBCMT; MSVCRT"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
@@ -145,9 +145,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rt-dx64.lib fx-dx64.lib libcollada14dom22-sdx64.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre-d.lib pcrecpp-d.lib libboost_system-d.lib minizip.lib libboost_filesystem-d.lib"
+				AdditionalOptions="/LTCG"
+				AdditionalDependencies="rt-dx64.lib fx-dx64.lib libcollada14dom22-sdx64.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre.lib pcrecpp.lib libboost_system-d.lib minizip.lib libboost_filesystem-d.lib"
 				OutputFile="$(OutDir)\$(ProjectName)-dx64.exe"
-				LinkIncremental="2"
+				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;..\..\..\rt\build\vc8-Win-dx64&quot;;&quot;..\..\..\dom\build\vc8-1.4-dx64&quot;;&quot;..\..\..\fx\build\vc8-Win-dx64&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib\x64&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)\..\lib.x64&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\x64\&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\x64&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
 				GenerateManifest="true"
 				ManifestFile="$(IntDir)\$(TargetFileName).intermediate.manifest"
@@ -224,16 +225,15 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rt.lib fx.lib libcollada14dom22-s.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre.lib pcrecpp.lib libboost_system.lib minizip.lib DevIL.lib libboost_filesystem.lib libbulletmath_d.lib libbulletmultithreaded_d.lib libbulletopenglsupport_d.lib libbulletsoftbody_d.lib libbulletcollision_d.lib libbulletdynamics_d.lib"
+				AdditionalDependencies="rt.lib fx.lib libcollada14dom22-s.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre.lib pcrecpp.lib libboost_system.lib minizip.lib DevIL.lib libboost_filesystem.lib libbulletmath.lib libbulletmultithreaded_d.lib libbulletopenglsupport_d.lib libbulletsoftbody_d.lib libbulletcollision.lib libbulletdynamics.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
-				LinkIncremental="1"
+				LinkIncremental="0"
 				AdditionalLibraryDirectories="&quot;..\..\..\dom\build\vc8-1.4&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\vc8&quot;;&quot;..\..\..\fx\build\vc8-Win&quot;;&quot;..\..\..\rt\build\vc8-Win&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
 				IgnoreAllDefaultLibraries="false"
-				IgnoreDefaultLibraryNames=""
+				IgnoreDefaultLibraryNames="LIBCMT"
 				GenerateDebugInformation="false"
-				AssemblyDebug="2"
 				EnableCOMDATFolding="0"
-				OptimizeForWindows98="1"
+				OptimizeForWindows98="0"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -287,9 +287,9 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;..\..\..\fx\include;..\..\..\rt\include;..\..\..\rt\include/1.4;&quot;..\..\..\rt\external-libs\devil\win32\include&quot;;&quot;..\..\..\rt\external-libs\bullet\include&quot;;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\..\dom\external-libs\boost&quot;"
-				PreprocessorDefinitions="CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE;WIN32;NDEBUG;_WINDOWS;BOOST_ALL_NO_LIB;NO_BULLET;NO_DEVIL"
+				PreprocessorDefinitions="CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE;WIN32;NDEBUG;_WINDOWS;BOOST_ALL_NO_LIB;NO_DEVIL"
 				RuntimeLibrary="2"
-				WarningLevel="4"
+				WarningLevel="3"
 				DebugInformationFormat="0"
 			/>
 			<Tool
@@ -303,10 +303,12 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="rtx64.lib fxx64.lib libcollada14dom22-sx64.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre.lib pcrecpp.lib libboost_system.lib minizip.lib DevIL.lib libboost_filesystem.lib libbulletmath_d.lib libbulletmultithreaded_d.lib libbulletopenglsupport_d.lib libbulletsoftbody_d.lib libbulletcollision_d.lib libbulletdynamics_d.lib"
+				AdditionalOptions="/LTCG"
+				AdditionalDependencies="rtx64.lib fxx64.lib libcollada14dom22-sx64.lib opengl32.lib glu32.lib libxml2_a.lib zlib.lib wsock32.lib winmm.lib pcre.lib pcrecpp.lib libboost_system.lib minizip.lib DevIL.lib libboost_filesystem.lib libbulletmathx64.lib libbulletcollisionx64.lib libbulletdynamicsx64.lib"
 				OutputFile="$(OutDir)\$(ProjectName)x64.exe"
 				AdditionalLibraryDirectories="&quot;..\..\..\dom\build\vc8-1.4x64&quot;;&quot;..\..\..\dom\external-libs\libxml2\win32\lib\x64&quot;;&quot;..\..\..\dom\external-libs\pcre\lib\x64&quot;;&quot;..\..\..\fx\build\vc8-Winx64&quot;;&quot;..\..\..\rt\build\vc8-Winx64&quot;;&quot;..\..\..\rt\external-libs\devIL\win32\lib&quot;;&quot;$(CG_LIB_PATH)\..\lib.x64&quot;;&quot;..\..\..\rt\external-libs\bullet\lib\vc8&quot;;&quot;..\..\..\dom\external-libs\boost\lib\x64&quot;;&quot;..\..\..\dom\external-libs\minizip\win32\lib&quot;"
-				IgnoreDefaultLibraryNames=""
+				IgnoreAllDefaultLibraries="false"
+				IgnoreDefaultLibraryNames="MSVCRTD;LIBCMT"
 				GenerateDebugInformation="false"
 				TargetMachine="17"
 			/>
