add /wd4819 in the compiling option to avoid warning C4819: The file contains a character that cannot be represented in the current code page (936). Save the file in Unicode format to prevent data loss
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@838 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/dom/projects/vc9-1.4/dom-static.vcproj
+++ b/dom/projects/vc9-1.4/dom-static.vcproj
@@ -40,6 +40,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/wd4819"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\libxml2\include&quot;;&quot;..\..\external-libs\tinyxml&quot;;&quot;..\..\external-libs\pcre&quot;;&quot;..\..\external-libs\minizip\include&quot;;&quot;..\..\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CRT_SECURE_NO_DEPRECATE;DOM_INCLUDE_LIBXML;PCRE_STATIC;BOOST_ALL_NO_LIB"
@@ -106,6 +107,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/wd4819"
 				WholeProgramOptimization="false"
 				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\libxml2\include&quot;;&quot;..\..\external-libs\tinyxml&quot;;&quot;..\..\external-libs\pcre&quot;;&quot;..\..\external-libs\minizip\include&quot;;&quot;..\..\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CRT_SECURE_NO_DEPRECATE;DOM_INCLUDE_LIBXML;PCRE_STATIC;BOOST_ALL_NO_LIB"
