--- a/dom/projects/vc8-1.4/dom-static.vcproj
+++ b/dom/projects/vc8-1.4/dom-static.vcproj
@@ -42,6 +42,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/wd4819"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\libxml2\include&quot;;&quot;..\..\external-libs\tinyxml&quot;;&quot;..\..\external-libs\pcre&quot;;&quot;..\..\external-libs\minizip\include&quot;;&quot;..\..\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CRT_SECURE_NO_DEPRECATE;DOM_INCLUDE_LIBXML;PCRE_STATIC;BOOST_ALL_NO_LIB"
@@ -108,6 +109,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/wd4819"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\libxml2\include&quot;;&quot;..\..\external-libs\tinyxml&quot;;&quot;..\..\external-libs\pcre&quot;;&quot;..\..\external-libs\minizip\include&quot;;&quot;..\..\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CRT_SECURE_NO_DEPRECATE;DOM_INCLUDE_LIBXML;PCRE_STATIC;BOOST_ALL_NO_LIB;BOOST_DISABLE_ABI_HEADERS;NO_ZAE"
@@ -174,6 +176,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/wd4819"
 				WholeProgramOptimization="false"
 				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\libxml2\include&quot;;&quot;..\..\external-libs\tinyxml&quot;;&quot;..\..\external-libs\pcre&quot;;&quot;..\..\external-libs\minizip\include&quot;;&quot;..\..\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CRT_SECURE_NO_DEPRECATE;DOM_INCLUDE_LIBXML;PCRE_STATIC;BOOST_ALL_NO_LIB"
@@ -239,6 +242,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/wd4819"
 				WholeProgramOptimization="false"
 				AdditionalIncludeDirectories="..\..\include;..\..\include\1.4;&quot;..\..\external-libs\libxml2\include&quot;;&quot;..\..\external-libs\tinyxml&quot;;&quot;..\..\external-libs\pcre&quot;;&quot;..\..\external-libs\minizip\include&quot;;&quot;..\..\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CRT_SECURE_NO_DEPRECATE;DOM_INCLUDE_LIBXML;PCRE_STATIC;BOOST_ALL_NO_LIB;BOOST_DISABLE_ABI_HEADERS;NO_ZAE"
