--- a/rt/projects/vc9-Win/rt.vcproj
+++ b/rt/projects/vc9-Win/rt.vcproj
@@ -41,6 +41,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/wd4819"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;../../include;../../include/1.4;..\..\..\fx\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\external-libs\bullet\include&quot;;&quot;..\..\external-libs\devil\win32\include&quot;;&quot;..\..\..\dom\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE;CRT_PLATFORM_INCLUDE=\&quot;CrtWin.h\&quot;;BOOST_ALL_NO_LIB"
@@ -107,6 +108,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/wd4819"
 				AdditionalIncludeDirectories="..\..\..\dom\include;..\..\..\dom\include\1.4;../../include;../../include/1.4;..\..\..\fx\include;&quot;$(CG_INC_PATH)&quot;;&quot;..\..\external-libs\bullet\include&quot;;&quot;..\..\external-libs\devil\win32\include&quot;;&quot;..\..\..\dom\external-libs\boost&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;CFX_PLATFORM_INCLUDE=\&quot;cfxWin.h\&quot;;_CRT_SECURE_NO_DEPRECATE;CRT_PLATFORM_INCLUDE=\&quot;CrtWin.h\&quot;;BOOST_ALL_NO_LIB"
 				RuntimeLibrary="2"
