--- a/dom/src/1.4/CMakeLists.txt
+++ b/dom/src/1.4/CMakeLists.txt
@@ -8,4 +8,4 @@ set_target_properties(collada14dom PROPERTIES
   CLEAN_DIRECT_OUTPUT 1
   SOVERSION ${COLLADA_DOM_SOVERSION}
   VERSION ${COLLADA_DOM_VERSION})
-install(TARGETS collada14dom DESTINATION lib)
+install(TARGETS collada14dom DESTINATION lib${LIB_SUFFIX})
