--- a/dom/src/1.5/CMakeLists.txt
+++ b/dom/src/1.5/CMakeLists.txt
@@ -8,4 +8,4 @@ set_target_properties(collada15dom PROPERTIES
   CLEAN_DIRECT_OUTPUT 1
   SOVERSION ${COLLADA_DOM_SOVERSION}
   VERSION ${COLLADA_DOM_VERSION})
-install(TARGETS collada15dom DESTINATION lib${LIB_SUFFIX})
+install(TARGETS collada15dom DESTINATION lib${LIB_SUFFIX} COMPONENT ${COMPONENT_PREFIX}15dom-dev )
