--- a/collada_dom-config.cmake.in
+++ b/collada_dom-config.cmake.in
@@ -23,12 +23,12 @@ if( WIN32 )
   set( COLLADA_DOM_CXX_FLAGS "${COLLADA_DOM_CXX_FLAGS} -DBOOST_ALL_DYN_LINK -DBOOST_ALL_NO_LIB")
 endif()
 set( COLLADA_DOM_LINK_FLAGS "" )
-  set( COLLADA_DOM_LIBRARY_DIRS "@CMAKE_INSTALL_PREFIX@/lib")
+set( COLLADA_DOM_LIBRARY_DIRS "${COLLADA_DOM_ROOT_DIR}/lib")
 if( COLLADA_DOM_FIND_COMPONENTS STREQUAL "1.4" )
-  set( COLLADA_DOM_INCLUDE_DIRS "@COLLADA_DOM_DOM_INCLUDE_INSTALL_DIR@" "@COLLADA_DOM_DOM_INCLUDE_INSTALL_DIR@/1.4")
+  set( COLLADA_DOM_INCLUDE_DIRS "${COLLADA_DOM_ROOT_DIR}/@COLLADA_DOM_INCLUDE_INSTALL_DIR@" "${COLLADA_DOM_ROOT_DIR}/@COLLADA_DOM_INCLUDE_INSTALL_DIR@/1.4")
   set( COLLADA_DOM_LIBRARIES collada14dom)
 elseif( COLLADA_DOM_FIND_COMPONENTS STREQUAL "1.5" )
-  set( COLLADA_DOM_INCLUDE_DIRS "@COLLADA_DOM_DOM_INCLUDE_INSTALL_DIR@" "@COLLADA_DOM_DOM_INCLUDE_INSTALL_DIR@/1.5")
+  set( COLLADA_DOM_INCLUDE_DIRS "${COLLADA_DOM_ROOT_DIR}/@COLLADA_DOM_INCLUDE_INSTALL_DIR@" "${COLLADA_DOM_ROOT_DIR}/@COLLADA_DOM_INCLUDE_INSTALL_DIR@/1.5")
   set( COLLADA_DOM_LIBRARIES collada15dom)
 else()
   message(FATAL_ERROR "need to specify a collada specification component, for example '1.4' or '1.5'")
