--- a/collada14dom.pc.in
+++ b/collada14dom.pc.in
@@ -3,7 +3,7 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=@CMAKE_INSTALL_PREFIX@/bin
 libdir=@CMAKE_INSTALL_PREFIX@/lib
-includedir=@COLLADA_DOM_INCLUDE_INSTALL_DIR@
+includedir=@CMAKE_INSTALL_PREFIX@/@COLLADA_DOM_INCLUDE_INSTALL_DIR@
 
 Name: collada14dom
 Description: COLLADA 1.4 Document Object Model (DOM)
