many updates to the cmake files to allow for windows compilation. added several updates to the 3rdparty libraries.
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@859 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,22 +8,14 @@ set (COLLADA_DOM_VERSION_MINOR 3)
 set (COLLADA_DOM_VERSION_PATCH 1)
 set (COLLADA_DOM_VERSION ${COLLADA_DOM_VERSION_MAJOR}.${COLLADA_DOM_VERSION_MINOR}.${COLLADA_DOM_VERSION_PATCH})
 set (COLLADA_DOM_SOVERSION ${COLLADA_DOM_VERSION_MAJOR})
-message(STATUS "Compiling Collada DOM Version ${COLLADA_DOM_VERSION}")
 
+message(STATUS "Compiling Collada DOM Version ${COLLADA_DOM_VERSION}")
 message(STATUS "Using cmake version ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}" )
-# some developers may be using an cmake cvs version which didn't have set_property() yet
-# Tell them that a more recent version is required.
-if(NOT COMMAND SET_PROPERTY)
-  message(FATAL_ERROR "You are using an old version of CMake from cvs, please update to CMake >= 2.6.0 or cvs at least from Feb 20th, 2008")
-endif(NOT COMMAND SET_PROPERTY)
+
 # http://www.cmake.org/cmake/help/cmake-2.6.html#policy:CMP0002
 cmake_policy(SET CMP0002 NEW)
 # http://www.cmake.org/cmake/help/cmake-2.6.html#policy:CMP0003
 cmake_policy(SET CMP0003 NEW)
-
-##############################################################################
-# Sets the location of nonstandard shared libraries
-##############################################################################
 
 # Use, i.e. don't skip the full RPATH for the build tree
 set(CMAKE_SKIP_BUILD_RPATH  FALSE)
@@ -67,6 +59,20 @@ set(COMPONENT_PREFIX libcollada)
 string(TOUPPER ${COMPONENT_PREFIX} COMPONENT_PREFIX_UPPER)
 set(CPACK_COMPONENTS_ALL ${COMPONENT_PREFIX}dom-dev)
 
+if( MSVC )
+  if( MSVC70 OR MSVC71 )
+    set(MESSAGE "Visual Studio 2003 and before are not supported!")
+    set(MSVC_PREFIX "vc80")
+  elseif( MSVC80 )
+    set(MSVC_PREFIX "vc80")
+  elseif( MSVC90 )
+    set(MSVC_PREFIX "vc90")
+  else()
+    set(MSVC_PREFIX "vc100")
+  endif()
+  set(COLLADA_DOM_LIBRARY_SUFFIX "${COLLADA_DOM_SOVERSION}-${MSVC_PREFIX}-mt")
+endif()
+
 include(CheckIncludeFile)
 include(CheckIncludeFileCXX)
 include(CheckLibraryExists)
@@ -103,6 +109,14 @@ set(COLLADA_DOM_INCLUDE_INSTALL_DIR "include/collada-dom")
 set(COLLADA_DOM_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dom/include)
 set(COLLADA_DOM_LINK_DIRS "")
 
+if( MSVC )
+  # force multi-threaded DLL boost
+  set(Boost_USE_MULTITHREAD ON)
+  set(Boost_USE_STATIC_LIBS OFF)
+  set(Boost_USE_STATIC_RUNTIME OFF)
+  set(Boost_CFLAGS "-DBOOST_ALL_DYN_LINK -DBOOST_ALL_NO_LIB")
+endif()
+  
 set(Boost_ADDITIONAL_VERSIONS "1.46" "1.45" "1.44" "1.43" "1.42" "1.41" "1.40" "1.39" "1.38" "1.37.0" "1.37" "1.35.0" "1.34.1" "1.34.0" "1.34" "1.33.1" "1.33.0" "1.33")
 
 if( NOT $ENV{BOOST_INCLUDEDIR} STREQUAL "" )
@@ -141,31 +155,38 @@ else()
   set(EXTRA_COMPILE_FLAGS "")
 endif()
 
-find_package(LibXml2)
+find_package(ZLIB)
+if( NOT ZLIB_FOUND )
+  message(STATUS "compiling zlib from souces and linking statically")
+  # compile from sources
+  add_subdirectory(dom/external-libs/zlib-1.2.5)
+  set(ZLIB_FOUND 1)
+  set(ZLIB_LIBRARIES zlib)
+  set(ZLIB_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/zlib-1.2.5)
+endif()
 
+find_package(LibXml2)
 if( LIBXML2_FOUND )
   include_directories(${LIBXML2_INCLUDE_DIR})
   add_definitions(${LIBXML2_DEFINITIONS} -DDOM_INCLUDE_LIBXML)
   message(STATUS "libxml2 found")
 else()
   if( MSVC )
-    set(LIBXML2_LIBRARIES optimized libxml2 debug libxml2d)
-    set(LIBXML2_INCLUDE_DIR)
+    set(LIBXML2_LIBRARIES ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/libxml2/win32/lib/libxml2)
+    set(LIBXML2_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/libxml2/include)
     set(LIBXML2_DEFINITIONS)
+    include_directories(${LIBXML2_INCLUDE_DIR})
+    add_definitions(-DDOM_INCLUDE_LIBXML)
   else()
     message(FATAL_ERROR "Could not find libxml2")
   endif()
-endif()
-
-find_package(ZLIB)
-if( NOT ZLIB_FOUND )
-  message(FATAL_ERROR "could not find zlib")
 endif()
 
 pkg_check_modules(minizip minizip)
 if(minizip_FOUND)
   set(MINIZIP_INCLUDE_DIR ${minizip_INCLUDE_DIRS})
 else()
+  message(STATUS "compiling minizip from sources and linking statically")
   add_subdirectory(dom/external-libs/minizip-1.1)
   set(MINIZIP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/minizip-1.1 ${ZLIB_INCLUDE_DIR})
 endif()
@@ -178,18 +199,21 @@ if( libpcrecpp_FOUND )
   if( NOT HAVE_PCRECPP_H )
     set(libpcrecpp_FOUND 0)
   endif()
-else()
-  message(FATAL_ERROR "need to install pcre and pcrecpp ${libpcrecpp_FOUND}")
 endif()
 
-if( LIBXML2_DEFINITIONS )
-  add_definitions(${LIBXML2_DEFINITIONS})
-endif()
-if( LIBXML2_INCLUDE_DIR )
-  include_directories(${LIBXML2_INCLUDE_DIR})
+if( NOT libpcrecpp_FOUND )
+  message(STATUS "System pcre not found, using local from sources")
+  # include the local pcre
+  add_subdirectory(dom/external-libs/pcre-8.02)
+  set(libpcrecpp_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/pcre-8.02)
+  set(libpcrecpp_LIBRARY_DIRS)
+  set(libpcrecpp_LIBRARIES pcrecpp_local)
+  set(libpcrecpp_CFLAGS_OTHERS "-DPCRE_STATIC")
+  set(libpcrecpp_LDFLAGS_OTHERS)
 endif()
 
-include_directories(${MINIZIP_INCLUDE_DIR})
+# declare minizip/zlib before libxml2! (for some reason the precompiled libxml2 libraries have zlib.h/zconf.h)
+include_directories(BEFORE ${MINIZIP_INCLUDE_DIR})
 include_directories(BEFORE ${libpcrecpp_INCLUDE_DIRS})
 
 set(COLLADA_DOM_LINK_DIRS ${COLLADA_DOM_LINK_DIRS} ${libpcrecpp_LIBRARY_DIRS})
@@ -249,7 +273,7 @@ if(CMAKE_CPACK_COMMAND AND UNIX AND OPT_BUILD_PACKAGES)
   set(CPACK_DEBIAN_PACKAGE_DEPENDS ${CPACK_COMPONENTS_ALL})
   set(CPACK_DEBIAN_PACKAGE_SUGGESTS)
   set(CPACK_DEBIAN_PACKAGE_NAME collada-dom)
-  set(CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES viewer fx rt Makefile.linux Makefile dom/codeGen dom/Makefile dom/external-libs/boost dom/external-libs/libxml2 dom/external-libs/minizip dom/external-libs/pcre dom/test dom/release dom/projects dom/make)
+  set(CPACK_DEBIAN_PACKAGE_REMOVE_SOURCE_FILES viewer fx rt Makefile.linux Makefile dom/codeGen dom/Makefile dom/external-libs/boost dom/external-libs/libxml2 dom/external-libs/minizip dom/external-libs/pcre dom/external-libs/pcre-8.02 dom/external-libs/zlib-1.2.5 dom/test dom/release dom/projects dom/make)
   set(CPACK_DEBIAN_PACKAGE_SOURCE_COPY svn export --force)
   set(CPACK_DEBIAN_CHANGELOG)
   execute_process(COMMAND lsb_release -is
