--- a/dom/src/1.5/CMakeLists.txt
+++ b/dom/src/1.5/CMakeLists.txt
@@ -5,6 +5,7 @@ target_link_libraries(collada15dom ${COLLADA_LIBS})
 set_target_properties(collada15dom PROPERTIES
   COMPILE_FLAGS "${COLLADA_COMPILE_FLAGS}"
   LINK_FLAGS "${libpcrecpp_LDFLAGS_OTHERS}"
+  OUTPUT_NAME collada15dom${COLLADA_DOM_LIBRARY_SUFFIX}
   CLEAN_DIRECT_OUTPUT 1
   SOVERSION ${COLLADA_DOM_SOVERSION}
   VERSION ${COLLADA_DOM_VERSION})
