many windows compilation fixes, added new libxml2
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@860 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,8 +61,7 @@ set(CPACK_COMPONENTS_ALL ${COMPONENT_PREFIX}dom-dev)
 
 if( MSVC )
   if( MSVC70 OR MSVC71 )
-    set(MESSAGE "Visual Studio 2003 and before are not supported!")
-    set(MSVC_PREFIX "vc80")
+    set(MSVC_PREFIX "vc70")
   elseif( MSVC80 )
     set(MSVC_PREFIX "vc80")
   elseif( MSVC90 )
@@ -172,11 +171,15 @@ if( LIBXML2_FOUND )
   message(STATUS "libxml2 found")
 else()
   if( MSVC )
-    set(LIBXML2_LIBRARIES ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/libxml2/win32/lib/libxml2)
-    set(LIBXML2_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/libxml2/include)
+    set(LIBXML2_LIBRARY_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/libxml2-new/lib")
+    set(LIBXML2_LIBRARIES "${LIBXML2_LIBRARY_DIRS}/libxml2-${MSVC_PREFIX}-mt.lib")
+    set(LIBXML2_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/dom/external-libs/libxml2-new/include)
     set(LIBXML2_DEFINITIONS)
+    set(LIBXML2_FOUND 1)
     include_directories(${LIBXML2_INCLUDE_DIR})
     add_definitions(-DDOM_INCLUDE_LIBXML)
+    # have to install the DLLs
+    install(DIRECTORY "${LIBXML2_LIBRARY_DIRS}/" DESTINATION lib${LIB_SUFFIX} FILES_MATCHING PATTERN "*-${MSVC_PREFIX}-*.dll")
   else()
     message(FATAL_ERROR "Could not find libxml2")
   endif()
