fixed debian package generation
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@871 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,6 +298,7 @@ if(CMAKE_CPACK_COMMAND AND UNIX AND OPT_BUILD_PACKAGES)
   set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/dom/license.txt)
 
   set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DISPLAY_NAME "common headers and installs")
+  set(CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DEPENDS ${CPACK_DEBIAN_PACKAGE_NAME})
   
   set(CPACK_DEBIAN_BUILD_DEPENDS debhelper cmake libxml2-dev libboost-dev zlib1g-dev libboost-filesystem-dev libboost-system-dev libpcre3-dev pkg-config)
 
@@ -322,7 +323,7 @@ if(CMAKE_CPACK_COMMAND AND UNIX AND OPT_BUILD_PACKAGES)
 
   if( OPT_BUILD_PACKAGE_DEFAULT )
     set(CPACK_COMPONENT_COLLADA-DOM-DEV_RECOMMENDS ${CPACK_DEBIAN_PACKAGE_NAME}-dev)
-    set(CPACK_COMPONENT_COLLADA-DOM-DEV_DISPLAY_NAME "${CPACK_PACKAGE_DESCRIPTION_SUMMARY}")
+    set(CPACK_COMPONENT_COLLADA-DOM-DEV_DISPLAY_NAME ${CPACK_COMPONENT_${COMPONENT_PREFIX_UPPER}-DEV_DISPLAY_NAME})
     set(CPACK_COMPONENTS_ALL ${CPACK_COMPONENTS_ALL} collada-dom-dev)
   endif()
 
