--- a/dom/CMakeLists.txt
+++ b/dom/CMakeLists.txt
@@ -36,7 +36,7 @@ set_target_properties(colladadom PROPERTIES
   CLEAN_DIRECT_OUTPUT 1
   SOVERSION ${COLLADA_DOM_SOVERSION}
   VERSION ${COLLADA_DOM_VERSION})
-install(TARGETS colladadom DESTINATION lib${LIB_SUFFIX} COMPONENT lib${COMPONENT_PREFIX} )
+install(TARGETS colladadom DESTINATION lib${LIB_SUFFIX} COMPONENT ${COMPONENT_PREFIX} )
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/dae DESTINATION ${COLLADA_DOM_INCLUDE_INSTALL_DIR} COMPONENT ${COMPONENT_PREFIX}-dev PATTERN ".svn" EXCLUDE PATTERN ".~" EXCLUDE)
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/modules DESTINATION ${COLLADA_DOM_INCLUDE_INSTALL_DIR} COMPONENT ${COMPONENT_PREFIX}-dev  PATTERN ".svn" EXCLUDE PATTERN ".~" EXCLUDE)
