more cmake fixes
git-svn-id: https://svn.code.sf.net/p/collada-dom/code/trunk@872 dfea1ed5-6b0d-0410-973e-e49e28f48b26

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,10 +56,12 @@ endif()
 
 set(CPACK_DEBIAN_PACKAGE_NAME collada-dom${COLLADA_DOM_SOVERSION})
 if(OPT_DOUBLE_PRECISION)
+  set(COLLADA_PRECISION "dp")
   set(CPACK_DEBIAN_PACKAGE_NAME "${CPACK_DEBIAN_PACKAGE_NAME}-dp")
   set(COLLADA_DOM_EXTERNAL_FLAGS "${COLLADA_DOM_EXTERNAL_FLAGS} -DCOLLADA_DOM_DAEFLOAT_IS64") # daeFloat is 64 bit
   message(STATUS "compiling with double float precision")
 else()
+  set(COLLADA_PRECISION "sp")
   set(CPACK_DEBIAN_PACKAGE_NAME "${CPACK_DEBIAN_PACKAGE_NAME}-sp")
   message(STATUS "compiling with single float precision")
 endif()
@@ -92,9 +94,9 @@ if( MSVC )
   else()
     set(MSVC_PREFIX "vc100")
   endif()
-  set(COLLADA_DOM_LIBRARY_SUFFIX "${COLLADA_DOM_SOVERSION}-${MSVC_PREFIX}-mt")
+  set(COLLADA_DOM_LIBRARY_SUFFIX "${COLLADA_DOM_SOVERSION}-${COLLADA_PRECISION}-${MSVC_PREFIX}-mt")
 else()
-  set(COLLADA_DOM_LIBRARY_SUFFIX ${COLLADA_DOM_SOVERSION})
+  set(COLLADA_DOM_LIBRARY_SUFFIX "${COLLADA_DOM_SOVERSION}-${COLLADA_PRECISION}")
 endif()
 
 include(CheckIncludeFile)
